--- a/Brochure/brochure.ipynb
+++ b/Brochure/brochure.ipynb
@@ -4,37 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Job Analyzer AI\n",
+    "### BUSINESS CHALLENGE:\n",
     "\n",
-    "Goal:\n",
-    "A user pastes a job description (or a URL to one), and this app:\n",
+    "Create a product that builds a Brochure for a company to be used for prospective clients, investors and potential recruits.\n",
     "\n",
-    "-Extracts skills and requirements\n",
-    "\n",
-    "-Tells them what they match / lack\n",
-    "\n",
-    "-Suggests what to learn\n",
-    "\n",
-    "-Generates tailored resume bullets or a cover letter\n"
+    "We will be provided a company name and their primary website."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
-    "# If these fail, please check you're running from an 'activated' environment with (llms) in the command prompt\n",
     "\n",
     "import os\n",
     "import requests\n",
-    "import json\n",
-    "from typing import List\n",
-    "from dotenv import load_dotenv\n",
     "from bs4 import BeautifulSoup\n",
+    "from typing import List\n",
     "from IPython.display import Markdown, display, update_display\n",
-    "from openai import OpenAI"
+    "from dotenv import load_dotenv\n",
+    "from openai import OpenAI\n",
+    "import google.generativeai\n",
+    "import anthropic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr # oh yeah!"
    ]
   },
   {
@@ -46,28 +48,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API key looks good so far\n"
+      "OpenAI API Key exists and begins sk-proj-\n",
+      "Anthropic API Key exists and begins sk-ant-\n",
+      "Google API Key exists and begins AIzaSyCZ\n"
      ]
     }
    ],
    "source": [
-    "# Initialize and constants\n",
+    "# Load environment variables in a file called .env\n",
+    "# Print the key prefixes to help with any debugging\n",
     "\n",
     "load_dotenv(override=True)\n",
-    "api_key = os.getenv('OPENAI_API_KEY')\n",
+    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "anthropic_api_key = os.getenv('ANTHROPIC_API_KEY')\n",
+    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
     "\n",
-    "if api_key and api_key.startswith('sk-proj-') and len(api_key)>10:\n",
-    "    print(\"API key looks good so far\")\n",
+    "if openai_api_key:\n",
+    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
     "else:\n",
-    "    print(\"There might be a problem with your API key? Please visit the troubleshooting notebook!\")\n",
+    "    print(\"OpenAI API Key not set\")\n",
     "    \n",
-    "MODEL = 'gpt-4o-mini'\n",
-    "openai = OpenAI()"
+    "if anthropic_api_key:\n",
+    "    print(f\"Anthropic API Key exists and begins {anthropic_api_key[:7]}\")\n",
+    "else:\n",
+    "    print(\"Anthropic API Key not set\")\n",
+    "\n",
+    "if google_api_key:\n",
+    "    print(f\"Google API Key exists and begins {google_api_key[:8]}\")\n",
+    "else:\n",
+    "    print(\"Google API Key not set\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to OpenAI, Anthropic and Google; comment out the Claude or Google lines if you're not using them\n",
+    "MODEL = 'gpt-4o-mini'\n",
+    "openai = OpenAI()\n",
+    "\n",
+    "claude = anthropic.Anthropic()\n",
+    "\n",
+    "google.generativeai.configure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +108,9 @@
     "}\n",
     "\n",
     "class Website:\n",
-    "    \"\"\"\n",
-    "    A utility class to represent a Website that we have scraped, now with links\n",
-    "    \"\"\"\n",
+    "    url: str\n",
+    "    title: str\n",
+    "    text: str\n",
     "\n",
     "    def __init__(self, url):\n",
     "        self.url = url\n",
@@ -89,12 +118,12 @@
     "        self.body = response.content\n",
     "        soup = BeautifulSoup(self.body, 'html.parser')\n",
     "        self.title = soup.title.string if soup.title else \"No title found\"\n",
-    "        if soup.body:\n",
-    "            for irrelevant in soup.body([\"script\", \"style\", \"img\", \"input\",\"nav\", \"footer\", \"form\", \"aside\"]):\n",
-    "                irrelevant.decompose()\n",
-    "            self.text = soup.body.get_text(separator=\"\\n\", strip=True)\n",
-    "        else:\n",
-    "            self.text = \"\"\n",
+    "      #   if soup.body:\n",
+    "        for irrelevant in soup.body([\"script\", \"style\", \"img\", \"input\"]):\n",
+    "               irrelevant.decompose()\n",
+    "        self.text = soup.body.get_text(separator=\"\\n\", strip=True)\n",
+    "      #   else:\n",
+    "            # self.text = \"\"\n",
     "      #   links = [link.get('href') for link in soup.find_all('a')]\n",
     "      #   self.links = [link for link in links if link]\n",
     "\n",
@@ -104,21 +133,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "job_system_prompt = (\n",
-    "    \"You are a helpful assistant that analyzes job descriptions for software developers.\\n\"\n",
-    "    \"Given a job description, extract:\\n\"\n",
-    "    \"- A brief summary of the role\\n\"\n",
-    "    \"- Required skills\\n\"\n",
-    "    \"- Preferred (optional) skills\\n\"\n",
-    "    \"- A list of matched and missing skills (based on user skills provided)\\n\"\n",
-    "    \"- Resume bullet point suggestions\\n\"\n",
-    "    \"- A short custom paragraph for a cover letter\\n\"\n",
-    "    \"Respond in JSON format with those keys: summary, required_skills, preferred_skills, matched_skills, missing_skills, resume_bullets, cover_letter.\"\n",
-    ")\n"
+    "site = Website(\"https://ai.google/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define this variable and then pass js=force_dark_mode when creating the Interface\n",
+    "\n",
+    "force_dark_mode = \"\"\"\n",
+    "function refresh() {\n",
+    "    const url = new URL(window.location);\n",
+    "    if (url.searchParams.get('__theme') !== 'dark') {\n",
+    "        url.searchParams.set('__theme', 'dark');\n",
+    "        window.location.href = url.href;\n",
+    "    }\n",
+    "}\n",
+    "\"\"\"\n",
+    "gr.Interface(fn=stream_gpt, inputs=\"textbox\", outputs=\"textbox\", flagging_mode=\"never\", js=force_dark_mode).launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"You are an assistant that analyzes the contents of several relevant pages from a company website \\\n",
+    "and creates a short brochure about the company for prospective customers, investors and recruits. Respond in markdown.\\\n",
+    "Include details of company culture, customers and careers/jobs if you have the information.\"\n",
+    "\n",
+    "# Or uncomment the lines below for a more humorous brochure - this demonstrates how easy it is to incorporate 'tone':\n",
+    "\n",
+    "# system_prompt = \"You are an assistant that analyzes the contents of several relevant pages from a company website \\\n",
+    "# and creates a short humorous, entertaining, jokey brochure about the company for prospective customers, investors and recruits. Respond in markdown.\\\n",
+    "# Include details of company culture, customers and careers/jobs if you have the information.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's create a call that streams back results\n",
+    "# If you'd like a refresher on Generators (the \"yield\" keyword),\n",
+    "# Please take a look at the Intermediate Python notebook in week1 folder.\n",
+    "\n",
+    "system_message = \"You are a helpful assistant that responds in markdown\"\n",
+    "\n",
+    "def stream_gpt(prompt):\n",
+    "    messages = [\n",
+    "        {\"role\": \"system\", \"content\": system_message},\n",
+    "        {\"role\": \"user\", \"content\": prompt}\n",
+    "      ]\n",
+    "    stream = openai.chat.completions.create(\n",
+    "        model='gpt-4o-mini',\n",
+    "        messages=messages,\n",
+    "        stream=True\n",
+    "    )\n",
+    "    result = \"\"\n",
+    "    for chunk in stream:\n",
+    "        result += chunk.choices[0].delta.content or \"\"\n",
+    "        yield result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stream_claude(prompt):\n",
+    "    result = claude.messages.stream(\n",
+    "        model=\"claude-3-haiku-20240307\",\n",
+    "        max_tokens=1000,\n",
+    "        temperature=0.7,\n",
+    "        system=system_message,\n",
+    "        messages=[\n",
+    "            {\"role\": \"user\", \"content\": prompt},\n",
+    "        ],\n",
+    "    )\n",
+    "    response = \"\"\n",
+    "    with result as stream:\n",
+    "        for text in stream.text_stream:\n",
+    "            response += text or \"\"\n",
+    "            yield response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stream_brochure(company_name, url, model):\n",
+    "    prompt = f\"You are looking at a company called: {company_name}\\n\"\n",
+    "    prompt += f\"Here are the contents of its landing page and other relevant pages; use this information to build a short brochure of the company in markdown.\\n\"\n",
+    "    prompt += Website(url).get_contents()\n",
+    "   \n",
+    "    if model==\"GPT\":\n",
+    "        result = stream_gpt(prompt)\n",
+    "    elif model==\"Claude\":\n",
+    "        result = stream_claude(prompt)\n",
+    "    else:\n",
+    "        raise ValueError(\"Unknown model\")\n",
+    "    yield from result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7889\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7889/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "view = gr.Interface(\n",
+    "    fn=stream_brochure,\n",
+    "    inputs=[gr.Textbox(label=\"Company name:\"),\n",
+    "            gr.Textbox(label=\"Landing page URL including http:// \"), \n",
+    "            gr.Dropdown([\"GPT\", \"Claude\"], label=\"Select model\", value=\"GPT\")],\n",
+    "    js=force_dark_mode,\n",
+    "    outputs=[gr.Markdown(label=\"Brochure\")],\n",
+    "    flagging_mode=\"never\"\n",
+    ")\n",
+    "view.launch()"
    ]
   }
  ],
